--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="Asset 2@3x.png" alt="logo">
+        <img id="logo" src="Asset 3@3x.png" alt="logo">
     </header>
+    <center>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -18,29 +19,29 @@
             <li><a href="#">Info</a></li>
         </ul>
     </nav>
+</center>
     <main>
         
-        <section>
-            <article>
-                <h1>Promotional</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam deleniti earum recusandae quisquam nobis, iure veniam nihil ipsum placeat cumque, quibusdam iste animi optio molestiae. Velit culpa voluptatem maxime temporibus.</p>
+        <section id="section1">
+            <article id="promotion">
+                <h1>30% Sale On All Items</h1>
+                <p>Transform your green space into a blooming paradise with our premium gardening products and merch. Cultivate a garden that radiates beauty and tranquility with our handpicked selection.</p>
             </article>
         </section>
         <section>
-            <article>
-                <h2>Article 1</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat voluptatibus quas rerum officiis ex facilis voluptate ea minima, expedita consequatur ratione eaque. Aut quo et, accusamus unde dolorum doloremque obcaecati!
+            <article id="a1">
+                <h2>Green Essentials</h2>
+                <p>
+                    Transform your garden into a lush oasis with our premium green gardening essentials!Elevate your outdoor space with the beauty of nature, while contributing to a greener planet.  
                 </p>
             </article>
-            <article>
-                <h2>Article 2</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat voluptatibus quas rerum officiis ex facilis voluptate ea minima, expedita consequatur ratione eaque. Aut quo et, accusamus unde dolorum doloremque obcaecati!
-                </p>
+            <article id="a2">
+                <h2>Fertilizers & Nutrients</h2>
+                <p>Nourish your plants with our premium fertilizers. From bloom boosters to organic blends, find the perfect formula to enhance growth and vitality. </p>
             </article>
-            <article>
-                <h2>Article 3</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat voluptatibus quas rerum officiis ex facilis voluptate ea minima, expedita consequatur ratione eaque. Aut quo et, accusamus unde dolorum doloremque obcaecati!
-                </p>
+            <article id="a3">
+                <h2>Ambient Garden Décor</h2>
+                <p>Transform your outdoor space into a haven of serenity. Shop our selection of soothing wind chimes, elegant garden statues, and ambient lighting to create a tranquil atmosphere.                </p>
             </article>
             
         </section>
@@ -49,7 +50,7 @@
     <div>
         <img src="Asset 3@3x.png" alt="imagefooter" id="imagefooter">
     </div>
-    <div>
+    <div id="footertext">
          <p>Copyright Lucky Shrub</p>
     </div>
     </footer>
